added response details

--- a/src/main/resources/templates/submitted.html
+++ b/src/main/resources/templates/submitted.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 
+<div>
+    <h1>Survey Submitted</h1>
+    <p>Thank you for taking this survey, your submission was successfully received.</p>
+    <form action="#" th:action="'/'" method="get">
+        <p>Go Home: <input type="submit" value="Home"/></p>
+    </form>
+</div>
+
 </body>
 </html>
