--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Survey</title>
+    <title th:text="${survey.getName()}"/>
 </head>
 <body>
+<div>
+    <h1 th:text="${survey.getName()}"/>
+</div>
+
+<div>
+    <form action="#" th:action="'/survey/' + ${survey.getName()} + '/submit'" th:object="${survey}" method="post">
+
+        <div th:each="question, questionIndex : *{questions}">
+            <fieldset>
+                <legend th:text="${question.content}"></legend>
+
+                <label>
+                    <textarea th:name="${'answer_' + questionIndex.index}"
+                              th:placeholder="'Your answer for ' + ${question.content}"></textarea>
+                </label>
+            </fieldset>
+        </div>
+        <button type="submit">Submit</button>
+    </form>
+</div>
 
 </body>
 </html>
