--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${survey.getName()}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <div>
