--- a/src/main/resources/templates/createSurvey.html
+++ b/src/main/resources/templates/createSurvey.html
@@ -1,63 +1,45 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Create a Survey - MiniSurveyMonkey</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script th:inline="javascript">
-        $(document).ready(function() {
-            // Function to duplicate the last question-inputs div
-            function duplicateDiv() {
-                var originalDiv = $('.question-inputs:last');
-                var clone = originalDiv.clone();
-
-                // Clear the input values in the cloned div
-                clone.find('input, select').val('');
-
-                // Append the cloned div to the questions-container
-                $('#questions-container').append(clone);
-            }
-
-            // Event listener for the button click
-            $('#add-question-btn').on('click', function() {
-                duplicateDiv();
-            });
-        });
-    </script>
+    <script src="/js/createSurvey.js"></script>
 </head>
 <body>
 
-<div class="container mt-5">
-    <h2>Create a Survey</h2>
-    <p>
-        Create a survey by adding questions.
-        You can select from 3 types of questions: open-ended, range, and multiple-choice questions.
-    </p>
-    <form th:action="@{/survey/add}" th:object="${survey}">
+<div class="container mt-5" id="main-container">
+    <h1>Create a Survey</h1>
+    <br>
+    <h6>Create a survey by adding questions.</h6>
+    <h6>You can select from 3 types of questions: open-ended, range, and multiple-choice questions.</h6>
+    <br>
+    <form action="/survey/add" method="post" id="survey-form">
         <div class="form-group">
-            <label for="title-input">Enter Survey Title:</label>
-            <input type="text" th:field= "*{name}" class="form-control" id="title-input">
+            <label for="survey-title">Enter Survey Title:</label>
+            <input type="text" class="form-control" id="survey-title" name="survey-title">
         </div>
         <br>
         <h3>Add Questions to your Survey</h3>
-        <div id="questions-container">
-            <div th:each="question, iterStat : *{questions}" class="form-group question-inputs">
-                <label for="dropdown-options">Select your question type</label>
-                <select th:field="*{questions[__${iterStat.index}__].type}" class="form-control" id="dropdown-options">
+        <br>
+        <div id="questions-container" class="form-group">
+            <fieldset class="question-set">
+                <legend>Question 1</legend>
+                <label for="question-type">Select your question type</label>
+                <select class="form-control" id="question-type" name="question-type">
                     <option value="open-ended">Open-Ended</option>
                     <option value="range">Range</option>
                     <option value="option">Multi-choice</option>
                 </select>
-                <br>
-                <label for="content-input">Enter question content:</label>
-                <input type="text" th:field="*{questions[__${iterStat.index}__].content}" class="form-control" id="content-input">
-            </div>
+                <label for="question-content">Enter question content:</label>
+                <input class="form-control" id="question-content" name="question-content">
+            </fieldset>
         </div>
         <div class="form-group">
-            <button id="add-question-btn" type="button" class="btn btn-primary mt-3">Add Question (+)</button>
-            <button type="submit" class="btn btn-primary mt-3">Submit Survey</button>
+            <button type="button" class="btn btn-primary mt-3" id="add-question-btn" >Add Question (+)</button>
+            <button type="submit" class="btn btn-primary mt-3" id="submit-survey-btn">Submit Survey</button>
         </div>
     </form>
 </div>
