Added more links, background image and favicon to the index page.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <title>Mini Survey Monkey</title>
     <link rel = "stylesheet" th:href = "@{/styles/css/index.css}"/>
+    <link rel="icon" th:href="@{/styles/css/images/logo1.png}" type="image/png">
 </head>
 <body>
 <div class = "background-image"> </div>
 <div class = "contentContainer">
     <h1>Welcome to Mini Survey Monkey</h1>
     <h2>Explore and create surveys:</h2>
-    <ul>
-        <li> <a href = "/login">Login</a></li>
-        <li> <a href = "/register">Register</a></li>
-    </ul>
+<!--    <ul>-->
+<!--        <li> <a href = "/login">Login</a></li>-->
+<!--        <li> <a href = "/register">Register</a></li>-->
+<!--    </ul>-->
+    <div class="button-container">
+        <button onclick="window.location.href='/login'">Login</button>
+        <button onclick="window.location.href='/register'">Register</button>
+        <button onclick="window.location.href='/survey/add'">Create Survey</button>
+        <button onclick="window.location.href=''">Find Survey</button>
+    </div>
 </div>
 </body>
 </html>
