--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -2,28 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${survey.getName()}"/>
+    <title th:text="${survey.name}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div>
-    <h1 th:text="${survey.getName()}"/>
-</div>
 
-<div>
-    <form action="#" th:action="'/survey/' + ${survey.getName()} + '/submit'" th:object="${survey}" method="post">
+<div class="container mt-5">
+    <h1 th:text="${survey.name}"/>
 
-        <div th:each="question, questionIndex : *{questions}">
-            <fieldset>
-                <legend th:text="${question.content}"></legend>
+    <form action="#" th:action="'/survey/' + ${survey.id} + '/submit'" th:object="${survey}" method="post">
+        <ol>
+            <div th:each="question, questionIndex : *{questions}">
+                <li>
+                    <label for="answer-content" th:text="${question.content}"></label>
+                    <input class="form-control" id="answer-content" name="answers">
+                </li>
 
-                <label>
-                    <textarea th:name="${'answer_' + questionIndex.index}"
-                              th:placeholder="'Your answer for ' + ${question.content}"></textarea>
-                </label>
-            </fieldset>
-        </div>
-        <button type="submit">Submit</button>
+            </div>
+        </ol>
+        <button type="submit" class="btn btn-primary mt-3">Submit</button>
     </form>
 </div>
 
