--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,16 +6,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div>
+<div class="container mt-5">
     <h1>Something went wrong! </h1>
     <p th:text="'Error Code: ' + ${errorCode}"/>
     <p th:text="'Description: ' + ${description}"/>
-</div>
 
-<div>
-    <form action="#" th:action="'/'" method="get">
-        <p>Go Home: <input type="submit" value="Home"/></p>
-    </form>
+    <a href="/">
+        <button type="submit" class="btn btn-primary mt-3">Home</button>
+    </a>
 </div>
 
 </body>
