--- a/src/main/resources/templates/submitted.html
+++ b/src/main/resources/templates/submitted.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Submitted</title>
@@ -11,6 +11,9 @@
     <h1>Survey Submitted</h1>
     <p>Thank you for taking this survey, your submission was successfully received.</p>
 
+    <a th:href="'/results/' + ${survey.id}">
+        <button type="submit" class="btn btn-primary mt-3">See Results</button>
+    </a>
     <a href="/">
         <button type="submit" class="btn btn-primary mt-3">Home</button>
     </a>
