--- a/src/main/resources/templates/createSurvey.html
+++ b/src/main/resources/templates/createSurvey.html
@@ -38,7 +38,8 @@
             </fieldset>
         </div>
         <div class="form-group">
-            <button type="button" class="btn btn-primary mt-3" id="add-question-btn" >Add Question (+)</button>
+            <button type="button" class="btn btn-primary mt-3" id="add-question-btn">Add Question (+)</button>
+            <button type="button" class="btn btn-primary mt-3" id="rem-question-btn">Remove Last Question (-)</button>
             <button type="submit" class="btn btn-primary mt-3" id="submit-survey-btn">Submit Survey</button>
         </div>
     </form>
