Added links: index, createSurvey pages

--- a/src/main/resources/templates/createSurvey.html
+++ b/src/main/resources/templates/createSurvey.html
@@ -12,6 +12,9 @@
 
 <div class="container mt-5" id="main-container">
     <h1>Create a Survey</h1>
+    <form action="/" method="get">
+        <button type="submit" class="btn btn-primary mt-3">Home</button>
+    </form>
     <br>
     <h6>Create a survey by adding questions.</h6>
     <h6>You can select from 3 types of questions: open-ended, range, and multiple-choice questions.</h6>
