--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
         <button onclick="window.location.href='/login'">Login</button>
         <button onclick="window.location.href='/register'">Register</button>
         <button onclick="window.location.href='/survey/add'">Create Survey</button>
-        <button onclick="window.location.href=''">Find Survey</button>
+        <button onclick="window.location.href='/survey/all'">Find Survey</button>
     </div>
 </div>
 </body>
