--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,7 +5,7 @@ a{
     text-decoration: none;
 }
 body{
-    background-image: url("images/IMG_4050.JPG");
+    background-image: url("../images/IMG_4050.JPG");
 
 }
 .contentContainer{
