--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Mini Survey Monkey</title>
-    <link rel = "stylesheet" th:href = "@{/styles/css/index.css}"/>
-    <link rel="icon" th:href="@{/styles/css/images/logo1.png}" type="image/png">
+    <link rel = "stylesheet" th:href = "@{/css/index.css}"/>
+    <link rel="icon" th:href="@{/images/logo1.png}" type="image/png">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
         <button onclick="window.location.href='/login'">Login</button>
         <button onclick="window.location.href='/register'">Register</button>
         <button onclick="window.location.href='/survey/add'">Create Survey</button>
-        <button onclick="window.location.href=''">Find Survey</button>
+        <button onclick="window.location.href='/survey/all'">Find Survey</button>
     </div>
 </div>
 </body>
