Add create survey success page and minor edits

--- a/src/main/resources/templates/createSurvey.html
+++ b/src/main/resources/templates/createSurvey.html
@@ -20,7 +20,7 @@
     <h1>Create a Survey</h1>
     <br>
     <h6>Create a survey by adding questions.</h6>
-    <h6>You can select from 3 types of questions: open-ended, range, and multiple-choice questions.</h6>
+    <h6>You can select from 3 types of questions: open-ended, range, and multi-choice.</h6>
     <br>
     <form action="/survey/add" method="post" id="survey-form">
         <div class="form-group">
@@ -60,7 +60,7 @@
         <div class="form-group">
             <button type="button" class="btn btn-primary mt-3" id="add-question-btn">Add Question (+)</button>
             <button type="button" class="btn btn-primary mt-3" id="rem-question-btn">Remove Last Question (-)</button>
-            <button type="submit" class="btn btn-primary mt-3" id="submit-survey-btn">Submit Survey</button>
+            <button type="submit" class="btn btn-primary mt-3" id="submit-survey-btn">Save Survey</button>
         </div>
     </form>
 </div>
