--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,25 @@
+#logo {
+    border-radius: 5px;
+    height: 40px;
+    width: auto;
+}
+
 #navBar {
+    align-items: center;
+    box-shadow: 0 4px 2px -2px rgba(128, 128, 128, 0.5);
     display: flex;
-    /*list-style: none;*/
-    /*padding: 0;*/
-    /*margin: 0;*/
-    /*align-items: center;*/
+    padding: 10px;
+    text-align: center;
+}
+
+#navBar button {
+    text-decoration-line: none;
+}
+
+#pageTitle {
+    font-size: x-large;
+    font-weight: bold;
+    margin-left: 10px;
+    text-align: left;
+    width: 100%;
 }
