--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Mini Survey Monkey</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel = "stylesheet" th:href = "@{/css/index.css}"/>
     <link rel="icon" th:href="@{/images/logo1.png}" type="image/png">
+	<link href="/css/main.css" rel="stylesheet">
+	<script src="/js/main.js"></script>
 </head>
 <body>
+<script th:if="${loggedInState}">changeLoggedInStatus("true")</script>
+<script th:unless="${loggedInState}">changeLoggedInStatus("false")</script>
 
 <div class = "background-image"> </div>
 <div class = "contentContainer">
