--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Registration and Login System</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link href="/css/main.css" rel="stylesheet">
+	<script src="/js/main.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
+    <a class="navbar-brand" href="/login">Registration and Login System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+          <a class="nav-link active" aria-current="page" href="/register">Register</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<br /><br />
+<br/><br/>
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -43,41 +40,22 @@
           <h2 class="text-center">Login Form</h2>
         </div>
         <div class="card-body">
-          <form
-                  method="GET"
-                  role="form"
-                  th:action="@{/login/user}"
-                  th:object="${surveyor}"
-                  class="form-horizontal"
-          >
+          <form method="POST" role="form" action="/" th:object="${surveyor}" class="form-horizontal">
             <div class="form-group mb-3">
-              <label class="control-label"> Email</label>
-              <input
-                      type="text"
-                      id="email"
-                      name="email"
-                      class="form-control"
-                      th:field="*{email}"
-                      placeholder="Enter email address"
-              />
+              <label class="control-label">Email</label>
+              <input type="text" id="email" name="email" class="form-control" th:field="*{email}" placeholder="Enter email address"/>
             </div>
 
             <div class="form-group mb-3">
-              <label class="control-label"> Password</label>
-              <input
-                      type="password"
-                      id="password"
-                      name="password"
-                      class="form-control"
-                      th:field="*{password}"
-                      placeholder="Enter password"
-              />
+              <label class="control-label">Password</label>
+              <input type="password" id="password" name="password" class="form-control" th:field="*{password}" placeholder="Enter password"/>
             </div>
+
             <div class="form-group mb-3">
               <button type="submit" class="btn btn-primary"  >Submit</button>
               <span> Not registered ?
-                                <a th:href="@{/register}">Register/Signup here</a>
-                            </span>
+                <a th:href="@{/register}">Register/Signup here</a>
+              </span>
             </div>
           </form>
         </div>
