--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Result</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link href="/css/main.css" rel="stylesheet">
+	<script src="/js/main.js"></script>
     <style>
         body{
             font-family: "Arial",sans-serif;
