--- a/src/main/resources/templates/submitted.html
+++ b/src/main/resources/templates/submitted.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Submitted</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link href="/css/main.css" rel="stylesheet">
+	<script src="/js/main.js"></script>
 </head>
 <body>
 
