--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${survey.name}"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link href="/css/main.css" rel="stylesheet">
+	<script src="/js/main.js"></script>
 </head>
 <body>
 
@@ -12,10 +14,16 @@
 
     <form action="#" th:action="'/survey/' + ${survey.id} + '/submit'" th:object="${survey}" method="post">
         <ol>
-            <div th:each="question, questionIndex : *{questions}">
+            <div th:each="question : ${questions}">
                 <li>
-                    <label for="answer-content" th:text="${question.content}"></label>
-                    <input type="text" class="form-control" id="answer-content" name="answers">
+                    <label th:text="${question.content}"></label>
+                    <div th:switch="${question.type.toString()}">
+                        <input th:case="'OPEN_ENDED'" type="text" class="form-control" name="answers">
+                        <input th:case="'NUMBER'" type="text" class="form-control" name="answers">
+                        <div th:case="'OPTION'" th:each="option : ${question.getOptions()}">
+                            <input type="radio" th:text="option" name="answers">
+                        </div>
+                    </div>
                 </li>
             </div>
         </ol>
