--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,40 +6,38 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link href="/css/main.css" rel="stylesheet">
 	<script src="/js/main.js"></script>
-    <style>
-        body{
-            font-family: "Arial",sans-serif;
-            align-content: center;
-        }
-        .title{
-            display: flex;
-            font-size: larger;
-            font-weight: bolder;
-            align-content: center;
-            justify-content: center;
-        }
-        .allQuestions{
-            border-color: black;
-            border-radius: 50px;
-        }
-        .question{
-            font-size: medium;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
-<p class="title" th:text="'Results for Survey - ' + ${survey.name}" />
-<hr>
 
-<div class="allQuestions" th:each="question, iterator : ${survey.questions}">
-    <p class="question" th:text="'Question ' + ${iterator.count}"/>
-    <p class="question" th:text="${question.content} "/>
+<div class="container mt-3">
 
-    <div th:each="answer: ${question.answers}">
-        <p th:text="${answer}"/>
+    <h1 style="text-align: center" th:text="'Results for Survey - ' + ${survey.name}" />
+    <hr>
+
+    <div th:each="question, iterator : ${survey.getQuestions()}">
+        <h5 th:text="'Question ' + ${iterator.count} + ': ' + ${question.content}"/>
+
+        <div th:switch="${question.type.toString()}">
+
+            <div th:case="'OPEN_ENDED'" th:each="answer: ${question.answers}">
+                <div th:each="answer: ${question.answers}">
+                    <p th:text="${answer}"/>
+                </div>
+            </div>
+
+            <div th:case="'NUMBER'" th:each="answer: ${question.answers}">
+                <div th:each="answer: ${question.answers}">
+                    <p th:text="${answer}"/>
+                </div>
+            </div>
+
+            <div th:case="'OPTION'" th:each="answer: ${question.answers}">
+                <div th:each="answer: ${question.answers}">
+                    <p th:text="${answer}"/>
+                </div>
+            </div>
+        </div>
     </div>
-    <br>
 </div>
 
 </body>
