Added code to access the hashmap answers of the number question. Added framework for different types of questions in view.html

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,6 +6,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link href="/css/main.css" rel="stylesheet">
 	<script src="/js/main.js"></script>
+
 </head>
 <body>
 
@@ -20,14 +21,16 @@
         <div th:switch="${question.type.toString()}">
 
             <div th:case="'OPEN_ENDED'" th:each="answer: ${question.answers}">
-                <div th:each="answer: ${question.answers}">
-                    <p th:text="${answer}"/>
-                </div>
+                <ul th:each="answer: ${question.answers}">
+                    <li th:text="${answer}"/>
+                </ul>
             </div>
 
             <div th:case="'NUMBER'" th:each="answer: ${question.answers}">
-                <div th:each="answer: ${question.answers}">
-                    <p th:text="${answer}"/>
+                <div th:each="answer: ${question.getAnswerAsMap()}">
+
+                    <div th:text="${answer.key}"></div>
+
                 </div>
             </div>
 
