--- a/src/main/resources/templates/accountPage.html
+++ b/src/main/resources/templates/accountPage.html
@@ -2,10 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Account Page </title>
+    <title>Mini Survey Monkey</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel = "stylesheet" th:href = "@{/css/index.css}"/>
+    <link rel="icon" th:href="@{/images/logo1.png}" type="image/png">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/accountPage.css" rel="stylesheet">
+    <script src="/js/main.js"></script>
 </head>
 <body>
-<div th:if="${loggedInUser}" th:text="'Welcome back, ' + ${loggedInUser.name}">Welcome to mini</div>
+<div class = "background-image"> </div>
+<div class="welcome" th:if="${loggedInUser}" th:text="'Welcome back, ' + ${loggedInUser.name}">Welcome to mini</div>
+<div>
+    <div class="centered">
+   <h1>Basic information</h1>
+    </div>
+    <table>
+        <tr>
+            <td>Full Name</td>
+            <td th:text= "${loggedInUser.name}">Cell 2</td>
+        </tr>
+        <tr>
+            <td>Email Address</td>
+            <td th:text= "${loggedInUser.email}">Cell 4</td>
+        </tr>
+        <tr>
+            <td>Surveyor ID</td>
+            <td th:text= "${loggedInUser.id}">Cell 5</td>
+        </tr>
+        <tr>
+            <td>Password</td>
+            <td > <button class="button" >Change Password</button>  </td>
+        </tr>
+    </table>
+
+</div>
 
 
 
