--- a/src/main/resources/templates/accountPage.html
+++ b/src/main/resources/templates/accountPage.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel = "stylesheet" th:href = "@{/css/index.css}"/>
     <link rel="icon" th:href="@{/images/logo1.png}" type="image/png">
+    <link rel="icon" th:href="@{/images/profile.jpeg}" type="image/png">
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/accountPage.css" rel="stylesheet">
     <script src="/js/main.js"></script>
@@ -13,6 +14,9 @@
 <body>
 <div class = "background-image"> </div>
 <div class="welcome" th:if="${loggedInUser}" th:text="'Welcome back, ' + ${loggedInUser.name}">Welcome to mini</div>
+<div class="image-container">
+    <img src="/images/profile.jpeg" alt="Descriptive Alt Text">
+</div>
 <div>
     <div class="centered">
    <h1>Basic information</h1>
