--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,10 +18,10 @@
     <h1>Welcome to Mini Survey Monkey</h1>
     <h2>Explore and create surveys:</h2>
 
-    <div class="button-container">
+    <div class="button-container" style="display: inline">
         <button th:unless="${loggedInState}" onclick="window.location.href='/login'">Login</button>
         <button th:unless="${loggedInState}" onclick="window.location.href='/register'">Register</button>
-        <button onclick="window.location.href='/survey/add'">Create Survey</button>
+        <button th:if="${loggedInState}" onclick="window.location.href='/survey/add'">Create Survey</button>
         <button onclick="window.location.href='/survey/all'">Find Survey</button>
     </div>
 </div>
