--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,13 +6,10 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link href="/css/main.css" rel="stylesheet">
 	<script src="/js/main.js"></script>
-
-<!--    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>-->
-
-
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-<p class="title" th:text="'Results for Survey - ' + ${survey.name}" />
+<h3 class="title" th:text="'Results for Survey - ' + ${survey.name}" />
 <hr>
 
 <div class="allQuestions" th:each="question, iterator : ${survey.questions}">
@@ -26,35 +23,29 @@
             </ul>
         </div>
         <div th:case="'NUMBER'">
-            <div th:each="option: ${question.getAnswerAsMap().keySet()}">
-                <p th:text="${option} + ': ' + ${question.getAnswerAsMap().get(option)}"></p>
-<!--                <div id="chart_div" style="width: 900px; height: 500px;"></div>-->
-            </div>
             <div>
-<!--                <script type="text/javascript">-->
-<!--                    google.charts.load("current", {packages:["corechart"]});-->
-<!--                    google.charts.setOnLoadCallback(drawChart);-->
+	            <canvas id="histogramChart" width="400" height="300"></canvas>
+	            <script th:inline="javascript">
+		            /*<![CDATA[*/
+		            const map = /*[[${question.getAnswerAsMap()}]]*/ null;
+		            /*]]>*/
 
-<!--                    function drawChart() {-->
-<!--                        // Assuming question.getAnswerAsMap() is a JavaScript object-->
-<!--                        var answerData = [];-->
+		            const values = Object.values(map);
+					const keys = Object.keys(map)
 
-<!--                        // Convert the answerData into an array of arrays-->
-<!--                        var dataArray = [];-->
-<!--                        dataArray.push(...Object.entries(answerData).map(([option, value]) => [option, value]));-->
-<!--                        console.log(dataArray);-->
+		            const ctx = document.getElementById('histogramChart');
+		            const config = {
+			            type: "bar",
+			            data: {
+				            labels: keys,
+				            datasets: [{
+					            label: "Number of Selections",
+					            data: values}],
+			            }
+		            };
 
-<!--                        var data = google.visualization.arrayToDataTable(dataArray);-->
-
-<!--                        var options = {-->
-<!--                            title: 'Your Chart Title',-->
-<!--                            legend: { position: 'none' },-->
-<!--                        };-->
-
-<!--                        var chart = new google.visualization.Histogram(document.getElementById('chart_div'));-->
-<!--                        chart.draw(data, options);-->
-<!--                    }-->
-<!--                </script>-->
+		            new Chart(ctx, config);
+	            </script>
             </div>
         </div>
         <div th:case="'OPTION'">
