--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,8 +19,8 @@
     <h2>Explore and create surveys:</h2>
 
     <div class="button-container">
-        <button onclick="window.location.href='/login'">Login</button>
-        <button onclick="window.location.href='/register'">Register</button>
+        <button th:unless="${loggedInState}" onclick="window.location.href='/login'">Login</button>
+        <button th:unless="${loggedInState}" onclick="window.location.href='/register'">Register</button>
         <button onclick="window.location.href='/survey/add'">Create Survey</button>
         <button onclick="window.location.href='/survey/all'">Find Survey</button>
     </div>
