--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -28,7 +28,7 @@
 			                    }
 		                    </script>
 	                    </div>
-	                    <div th:each="option, optionIndex : ${question.getOptions()}">
+	                    <div th:each="option : ${question.getAnswerAsMap().keySet()}">
 		                    <label>
 			                    <input type="radio" th:value="${option}" name="answers"/>
 			                    <span th:text="${option}"></span>
