--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,48 +6,52 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link href="/css/main.css" rel="stylesheet">
 	<script src="/js/main.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>'
 </head>
 <body>
-<h3 class="title" th:text="'Results for Survey - ' + ${survey.name}" />
-<hr>
 
-<div class="allQuestions" th:each="question, iterator : ${survey.questions}">
-    <p class="question" th:text="'Question ' + ${iterator.count}"/>
-    <p class="question" th:text="${question.content} "/>
+<div class="container mt-3">
+    <h3 class="title" th:text="'Survey Results: '+ ${survey.name}" />
+    <hr>
 
-    <div th:switch="${question.type.toString()}">
-        <div th:case="'OPEN_ENDED'" th:each="answer: ${question.answers}">
-            <ul th:each="answer: ${question.answers}">
-                <li th:text="${answer}"/>
-            </ul>
-        </div>
-        <div th:case="'NUMBER'">
-            <div>
-	            <canvas id="histogramChart" width="400" height="300"></canvas>
-	            <script th:inline="javascript">
-		            /*<![CDATA[*/
-		            const map = /*[[${question.getAnswerAsMap()}]]*/ null;
-		            /*]]>*/
+    <div class="allQuestions" th:each="question, iterator : ${survey.questions}">
+        <p class="question" th:text="'Question ' + ${iterator.count}"/>
+        <p class="question" th:text="${question.content} "/>
 
-		            const values = Object.values(map);
-					const keys = Object.keys(map)
-
-		            const ctx = document.getElementById('histogramChart');
-		            const config = {
-			            type: "bar",
-			            data: {
-				            labels: keys,
-				            datasets: [{
-					            label: "Number of Selections",
-					            data: values}],
-			            }
-		            };
-
-		            new Chart(ctx, config);
-	            </script>
+        <div th:switch="${question.type.toString()}">
+            <div th:case="'OPEN_ENDED'" th:each="answer: ${question.answers}">
+                <ul th:each="answer: ${question.answers}">
+                    <li th:text="${answer}"/>
+                </ul>
             </div>
-        </div>
+            <div th:case="'NUMBER'">
+                <div style="width: 500px">
+                    <canvas id="histogramChart" width="100px" height="50px"></canvas>
+                </div>
+                <script th:inline="javascript">
+                    /*<![CDATA[*/
+                    const map = /*[[${question.getAnswerAsMap()}]]*/ null;
+                    /*]]>*/
+
+                    const values = Object.values(map);
+                    const keys = Object.keys(map);
+
+                    console.log(keys);
+
+                    const ctx = document.getElementById('histogramChart');
+                    const config = {
+                        type: "bar",
+                        data: {
+                            labels: keys,
+                            datasets: [{
+                                label: "Number of Selections",
+                                data: values}],
+                        }
+                    };
+
+                    new Chart(ctx, config);
+                </script>
+            </div>
         <div th:case="'OPTION'">
             <div th:each="option, iterator : ${question.getAnswerAsMap().keySet()}">
                 <p th:text="${option} + ': ' + ${question.getAnswerAsMap().get(option)}"></p>
