--- a/src/main/resources/templates/createSurvey.html
+++ b/src/main/resources/templates/createSurvey.html
@@ -14,9 +14,7 @@
 
 <div class="container mt-5 mb-5" id="main-container">
     <div class="d-flex justify-content-end">
-        <form action="/" method="get">
-            <button type="submit" class="btn btn-primary mt-3">Home</button>
-        </form>
+	    <button type="submit" class="btn btn-primary mt-3" onclick="window.location.href = '/'">Home</button>
     </div>
 
     <h1>Create a Survey</h1>
