--- a/src/main/resources/templates/accountPage.html
+++ b/src/main/resources/templates/accountPage.html
@@ -4,43 +4,64 @@
     <meta charset="UTF-8">
     <title>Mini Survey Monkey</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel = "stylesheet" th:href = "@{/css/index.css}"/>
-    <link rel="icon" th:href="@{/images/logo1.png}" type="image/png">
-    <link rel="icon" th:href="@{/images/profile.jpeg}" type="image/png">
     <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/accountPage.css" rel="stylesheet">
     <script src="/js/main.js"></script>
 </head>
 <body>
-<div class = "background-image"> </div>
-<div class="welcome" th:if="${loggedInUser}" th:text="'Welcome back, ' + ${loggedInUser.name}">Welcome to mini</div>
-<div class="image-container">
-    <img src="/images/profile.jpeg" alt="Descriptive Alt Text">
-</div>
-<div>
-    <div class="centered">
-   <h1>Basic information</h1>
-    </div>
-    <table>
-        <tr>
-            <td>Full Name</td>
-            <td th:text= "${loggedInUser.name}">Cell 2</td>
-        </tr>
-        <tr>
-            <td>Email Address</td>
-            <td th:text= "${loggedInUser.email}">Cell 4</td>
-        </tr>
-        <tr>
-            <td>Surveyor ID</td>
-            <td th:text= "${loggedInUser.id}">Cell 5</td>
-        </tr>
-        <tr>
-            <td>Password</td>
-            <td > <button class="button" >Change Password</button>  </td>
-        </tr>
-    </table>
+<div class="container mt-3">
+	<h3>Basic information</h3>
+	<table style="width: 100%">
+		<tr>
+			<td>Full Name</td>
+			<td th:text= "${loggedInUser.name}">Cell 2</td>
+		</tr>
+		<tr>
+			<td>Email Address</td>
+			<td th:text= "${loggedInUser.email}">Cell 4</td>
+		</tr>
+		<tr>
+			<td>Surveyor ID</td>
+			<td th:text= "${loggedInUser.id}">Cell 5</td>
+		</tr>
+		<tr>
+			<td>Password</td>
+			<td><button class="btn btn-link" >Change Password</button> </td>
+		</tr>
+	</table>
 
+	<div>
+		<h3>Surveys</h3>
+		<table style="width: 100%">
+			<tr>
+				<th>Survey Name</th>
+				<th style="text-align: center">Access Status</th>
+				<th style="text-align: center">Toggle Access</th>
+				<th style="text-align: center">View Results</th>
+			</tr>
+			<div th:each="survey : ${loggedInUser.getSurveys()}">
+				<tr>
+					<td th:text="${survey.name}"></td>
+					<td style="color: red; text-align: center" th:if="${survey.locked}" th:text="'Closed'"></td>
+					<td style="color: green; text-align: center" th:if="${!survey.locked}" th:text="'Open'"></td>
+					<td style="text-align: center"><button class="btn btn-outline-primary" th:onclick="toggleAccess(/*[[${survey.id}]]*/)">Toggle</button></td>
+					<td style="text-align: center"><a class="btn btn-outline-primary" th:href="'/results/' + ${survey.id}" role="button">Show Result</a></td>
+				</tr>
+			</div>
+		</table>
+
+		<script th:inline="javascript">
+			function toggleAccess(id) {
+				const xhr = new XMLHttpRequest();
+				xhr.open('POST', '/survey/toggleAccess?surveyId=' + encodeURIComponent(id), true);
+				xhr.onload = function() {
+					if (xhr.status === 200) {
+						location.reload();
+					}
+				};
+				xhr.send();
+			}
+		</script>
+	</div>
 </div>
-<button>Lock Survey</button>
 </body>
 </html>
